# gmail-archive

./: .flake8  .gitignore  README.md  pyproject.toml  setup_check.py
gmail_archive/: email_body_utils.py  email_classifier.py  email_table_formatter.py  gmail_client.py  main.py
tests/: test_email_table_formatter.py  test_message_utils.py
